Implemented game state switching; minor refactoring to remove unnecessary code

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -78,6 +78,8 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="InputAction_SwitchState",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
++ActionMappings=(ActionName="InputAction_OpenMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +AxisMappings=(AxisName="InputAxis_Rotate_Right",Scale=1.000000,Key=E)
 +AxisMappings=(AxisName="InputAxis_Rotate_Right",Scale=-1.000000,Key=Q)
 +AxisMappings=(AxisName="InputAxis_Rotate_Right",Scale=1.000000,Key=Gamepad_RightX)
